--- a/src/pricecalc.ui
+++ b/src/pricecalc.ui
@@ -1,13 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
-  <object class="GtkWindow" id="window">
+  <object class="GtkListStore" id="liststore1">
+    <columns>
+      <!-- column-name gchararray1 -->
+      <column type="gchararray"/>
+    </columns>
+    <data>
+      <row>
+        <col id="0" translatable="yes">100%</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">90%</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">80%</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">70%</col>
+      </row>
+    </data>
+  </object>
+  <object class="GtkWindow" id="window_main">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="title" translatable="yes">window</property>
+    <property name="title" translatable="yes">PriceCalc</property>
     <property name="default_width">500</property>
     <property name="default_height">400</property>
-    <signal name="destroy" handler="main_on_destroy" swapped="no"/>
+    <signal name="destroy" handler="main_window_on_destroy" swapped="no"/>
     <child>
       <object class="GtkBox" id="box1">
         <property name="visible">True</property>
@@ -71,6 +91,10 @@
                             <property name="can_focus">True</property>
                             <property name="hexpand">True</property>
                             <property name="invisible_char">●</property>
+                            <property name="placeholder_text">请输入价格</property>
+                            <property name="input_purpose">number</property>
+                            <signal name="changed" handler="main_window_calc" after="yes" swapped="yes"/>
+                            <signal name="insert-text" handler="main_window_entry_price_only_digit" swapped="yes"/>
                           </object>
                           <packing>
                             <property name="left_attach">1</property>
@@ -85,6 +109,11 @@
                             <property name="can_focus">True</property>
                             <property name="hexpand">True</property>
                             <property name="invisible_char">●</property>
+                            <property name="progress_pulse_step">0.10000000149011612</property>
+                            <property name="placeholder_text">请输入数量</property>
+                            <property name="input_purpose">number</property>
+                            <signal name="changed" handler="main_window_calc" swapped="yes"/>
+                            <signal name="insert-text" handler="main_window_entry_number_only_digit" swapped="yes"/>
                           </object>
                           <packing>
                             <property name="left_attach">1</property>
@@ -101,10 +130,19 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkComboBox" id="combobox1">
+                      <object class="GtkComboBox" id="combobox_discount">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="border_width">5</property>
+                        <property name="model">liststore1</property>
+                        <property name="active">0</property>
+                        <signal name="changed" handler="main_window_calc" swapped="yes"/>
+                        <child>
+                          <object class="GtkCellRendererText" id="cellrenderertext1"/>
+                          <attributes>
+                            <attribute name="text">0</attribute>
+                          </attributes>
+                        </child>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -151,6 +189,7 @@
                   <object class="GtkTextView" id="textview_output">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="editable">False</property>
                   </object>
                 </child>
               </object>
@@ -168,6 +207,22 @@
             <property name="expand">True</property>
             <property name="fill">True</property>
             <property name="position">1</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkButton" id="button_clear">
+            <property name="label">gtk-clear</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">True</property>
+            <property name="border_width">5</property>
+            <property name="use_stock">True</property>
+            <signal name="clicked" handler="main_window_clear" swapped="yes"/>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">2</property>
           </packing>
         </child>
       </object>
